[bric30otherPages]our-stores, order-placed, wishlist and storelocator

--- a/store/blocks/pages/our-stores.jsonc
+++ b/store/blocks/pages/our-stores.jsonc
@@ -4,16 +4,20 @@
   },
   "flex-layout.row#our-stores": {
     "props": {
-      "width": "100%"
+      "width": "100%",
+      "htmlId": "I nostri negozi"
     },
-    "children": ["flex-layout.row#main-container-our-stores"]
+    "children": ["flex-layout.row#main-container-our-stores"],
+    "title": "I nostri negozi"
   },
   "flex-layout.row#main-container-our-stores": {
     "props": {
       "blockClass": "our-stores-main",
-      "width": "100%"
+      "width": "100%",
+      "htmlId": "Contenitore principale"
     },
-    "children": ["flex-layout.col#container-our-stores"]
+    "children": ["flex-layout.col#container-our-stores"],
+    "title": "Contenitore principale"
   },
   "flex-layout.col#container-our-stores": {
     "children": [
@@ -26,30 +30,38 @@
   "flex-layout.row#our-stores-tilte": {
     "children": ["rich-text#our-stores-tilte"],
     "props": {
-      "blockClass": "our-stores-title"
-    }
+      "blockClass": "our-stores-title",
+      "htmlId": "Riga del titolo"
+    },
+    "title": "Riga del titolo"
   },
   "rich-text#our-stores-tilte": {
     "props": {
       "text": "# Tutti gli store",
       "blockClass": "our-stores-title",
       "textAlignment": "CENTER",
-      "textPosition": "CENTER"
-    }
+      "textPosition": "CENTER",
+      "htmlId": "Titolo"
+    },
+    "title": "Titolo"
   },
   "flex-layout.row#our-stores-subtitle": {
     "children": ["rich-text#our-stores-subtitle"],
     "props": {
-      "blockClass": "our-stores-subtitle"
-    }
+      "blockClass": "our-stores-subtitle",
+      "htmlId": "Riga del sottotitolo"
+    },
+    "title": "Riga del sottotitolo"
   },
   "rich-text#our-stores-subtitle": {
     "props": {
       "text": "### Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
       "blockClass": "our-stores-subtitle",
       "textAlignment": "CENTER",
-      "textPosition": "CENTER"
-    }
+      "textPosition": "CENTER",
+      "htmlId": "Sottotitolo"
+    },
+    "title": "Sottotitolo"
   },
   "flex-layout.row#our-stores-content": {
     "children": [
@@ -57,7 +69,11 @@
       "flex-layout.col#our-stores-col2",
       "flex-layout.col#our-stores-col3",
       "flex-layout.col#our-stores-col4"
-    ]
+    ],
+    "props": {
+      "htmlId": "Contenuto"
+    },
+    "title": "Contenuto"
   },
   "flex-layout.col#our-stores-col1": {
     "children": [
@@ -67,7 +83,11 @@
       "rich-text#our-stores-item4",
       "rich-text#our-stores-item5",
       "rich-text#our-stores-item6"
-    ]
+    ],
+    "props": {
+      "htmlId": "Colonna 1"
+    },
+    "title": "Colonna 1"
   },
   "flex-layout.col#our-stores-col2": {
     "children": [
@@ -77,7 +97,11 @@
       "rich-text#our-stores-item4",
       "rich-text#our-stores-item5",
       "rich-text#our-stores-item6"
-    ]
+    ],
+    "props": {
+      "htmlId": "Colonna 2"
+    },
+    "title": "Colonna 2"
   },
   "flex-layout.col#our-stores-col3": {
     "children": [
@@ -87,7 +111,11 @@
       "rich-text#our-stores-item4",
       "rich-text#our-stores-item5",
       "rich-text#our-stores-item6"
-    ]
+    ],
+    "props": {
+      "htmlId": "Colonna 3"
+    },
+    "title": "Colonna 3"
   },
   "flex-layout.col#our-stores-col4": {
     "children": [
@@ -97,7 +125,11 @@
       "rich-text#our-stores-item4",
       "rich-text#our-stores-item5",
       "rich-text#our-stores-item6"
-    ]
+    ],
+    "props": {
+      "htmlId": "Colonna 4"
+    },
+    "title": "Colonna 4"
   },
   "rich-text#our-stores-item1": {
     "title": "Card-Item",
