--- a/store/blocks/order-placed.jsonc
+++ b/store/blocks/order-placed.jsonc
@@ -29,9 +29,11 @@
       "marginTop": 8,
       "marginBottom": 8,
       "horizontalAlign": "center",
-      "preventHorizontalStretch": true
+      "preventHorizontalStretch": true,
+      "htmlId": "Pulsanti di conferma"
     },
-    "children": ["flex-layout.col#confirmation-buttons"]
+    "children": ["flex-layout.col#confirmation-buttons"],
+    "title": "Pulsanti di conferma"
   },
   "flex-layout.col#confirmation-buttons": {
     "children": ["op-print-button"]
@@ -63,12 +65,14 @@
       "fullWidth": true,
       "colSizing": "auto",
       "colGap": 5,
-      "marginBottom": 5
+      "marginBottom": 5,
+      "htmlId": "Ordine header"
     },
     "children": [
       "flex-layout.col#order-header-info",
       "flex-layout.col#order-header-options"
-    ]
+    ],
+    "title": "Ordine header"
   },
   "flex-layout.col#order-header-info": {
     "children": ["op-order-number", "op-order-datetime", "op-order-seller"]
@@ -77,7 +81,11 @@
     "children": ["responsive-layout.desktop#order-options-desktop"]
   },
   "responsive-layout.desktop#order-options-desktop": {
-    "children": ["op-order-options"]
+    "children": ["op-order-options"],
+    "props": {
+      "htmlId": "Opizione di ordine Desktop"
+    },
+    "title": "Opizione di ordine Desktop"
   },
   // payment section
   "op-section#payments": {
@@ -96,8 +104,10 @@
   "op-order-options#mobile": {
     "props": {
       "blockClass": "mobile",
-      "fullWidth": true
-    }
+      "fullWidth": true,
+      "htmlId": "Opizione di ordine Mobile"
+      },
+    "title": "Opizione di ordine Mobile"
   },
   "op-section#pickup-packages": {
     "props": {
@@ -118,28 +128,36 @@
       "rich-text#message3"
     ],
     "props": {
-      "blockClass": "order-notices"
-    }
+      "blockClass": "order-notices",
+      "htmlId": "Avvisi di ordine effettuato"
+      },
+    "title": "Avvisi di ordine effettuato"
   },
   "rich-text#message1": {
     "props": {
       "text": "L'approvazione del pagamento può richiedere da 5 minuti a 5 giorni lavorativi.",
       "textAlignment": "CENTER",
-      "blockClass": ["order-placed-message", "order-placed-message-border"]
-    }
+      "blockClass": ["order-placed-message", "order-placed-message-border"],
+      "htmlId": "Messagio 1"
+      },
+    "title": "Messagio 1"
   },
   "rich-text#message2": {
     "props": {
       "text": "Il tempo di consegna inizia a decorrere dal momento della conferma del pagamento.",
       "textAlignment": "CENTER",
-      "blockClass": ["order-placed-message", "order-placed-message-border"]
-    }
+      "blockClass": ["order-placed-message", "order-placed-message-border"],
+      "htmlId": "Messagio 2"
+      },
+    "title": "Messagio 2"
   },
   "rich-text#message3": {
     "props": {
       "text": "Il codice tracking verrà inviato alla tua mail quando il pacco sarà affidato al corriere.",
       "textAlignment": "CENTER",
-      "blockClass": "order-placed-message"
-    }
+      "blockClass": "order-placed-message",
+      "htmlId": "Messagio 3"
+      },
+    "title": "Messagio 3"
   }
 }
