--- a/store/blocks/pages/editorial.jsonc
+++ b/store/blocks/pages/editorial.jsonc
@@ -122,8 +122,10 @@
   "flex-layout.row#about-banner-3": {
     "children": ["flex-layout.col#about-banner-3", "image#about-banner-3"],
     "props": {
-      "blockClass": "editorial-containerBanner3"
-    }
+      "blockClass": "editorial-containerBanner3",
+      "htmlId": "Circa - banner 3"
+    },
+    "title": "Circa - banner 3"
   },
   "image#about-banner-3": {
     "props": {
@@ -147,16 +149,20 @@
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
       "textAlignment": "LEFT",
       "textPosition": "LEFT",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 3 - titolo"
+    },
+    "title": "Circa - banner 3 - titolo"
   },
   "rich-text#about-banner-3-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis bibendum venenatis vulputate. Nam sed velit felis. Cras ultricies congue mauris id scelerisque. Maecenas ut scelerisque quam. In hac habitasse platea dictumst. Nullam a urna a lorem imperdiet eleifend quis a nunc.",
       "textAlignment": "LEFT",
       "textPosition": "LEFT",
-      "blockClass": "editorial-paragraph"
-    }
+      "blockClass": "editorial-paragraph",
+      "htmlId": "Circa - banner 3 - descrizione"
+    },
+    "title": "Circa - banner 3 - descrizione"
   },
   "flex-layout.row#about-banners-section": {
     "children": [
@@ -164,8 +170,10 @@
       "flex-layout.col#about-banner-5"
     ],
     "props": {
-      "blockClass": "editorial-sectionBanners4and5"
-    }
+      "blockClass": "editorial-sectionBanners4and5",
+      "htmlId": "Circa - banners - sezione"
+    },
+    "title": "Circa - banners - sezione"
   },
   "flex-layout.col#about-banner-4": {
     "children": [
@@ -188,14 +196,18 @@
   "rich-text#about-banner-4-title": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 4 - titolo"
+    },
+    "title": "Circa - banner 4 - titolo"
   },
   "rich-text#about-banner-4-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis bibendum venenatis vulputate. Nam sed velit felis. Cras ultricies congue mauris id scelerisque. ",
-      "blockClass": "editorial-paragraph"
-    }
+      "blockClass": "editorial-paragraph",
+      "htmlId": "Circa - banner 4 - descrizione"
+    },
+    "title": "Circa - banner 4 - descrizione"
   },
   "flex-layout.col#about-banner-5": {
     "children": [
@@ -218,26 +230,31 @@
   "rich-text#about-banner-5-title": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 5 - titolo"
+    },
+    "title": "Circa - banner 5 - titolo"
   },
   "rich-text#about-banner-5-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit,   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ",
-      "blockClass": "editorial-paragraph"
-    }
+      "blockClass": "editorial-paragraph",
+      "htmlId": "Circa - banner 5 - descrizione"
+    },
+    "title": "Circa - banner 5 - descrizione"
   },
   "flex-layout.row#about-banners-and-video": {
     "props": {
-      "blockClass": "editorial-sectionBannersAndVideo"
+      "blockClass": "editorial-sectionBannersAndVideo",
+      "htmlId": "Circa - banner e video"
     },
     "children": [
       "flex-layout.col#about-banner-6",
       "flex-layout.col#about-banner-7",
       "flex-layout.col#about-video"
-    ]
-  },
-
+    ],
+    "title": "Circa - banner e video"
+},
   "flex-layout.col#about-banner-6": {
     "children": [
       "image#about-banner-6",
@@ -258,14 +275,18 @@
   "rich-text#about-banner-6-title": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 6 - titolo"
+    },
+    "title": "Circa - banner 6 - titolo"
   },
   "rich-text#about-banner-6-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis bibendum venenatis vulputate. Nam sed velit felis. Cras ultricies congue mauris id scelerisque. ",
-      "blockClass": "editorial-paragraph"
-    }
+      "blockClass": "editorial-paragraph",
+      "htmlId": "Circa - banner 6 - descrizione"
+    },
+    "title": "Circa - banner 6 - descrizione"
   },
   "flex-layout.col#about-banner-7": {
     "children": [
@@ -287,14 +308,18 @@
   "rich-text#about-banner-7-title": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 7 - titolo"
+    },
+    "title": "Circa - banner 7 - titolo"
   },
   "rich-text#about-banner-7-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis bibendum venenatis vulputate. Nam sed velit felis. Cras ultricies congue mauris id scelerisque. ",
-      "blockClass": "editorial-paragraph"
-    }
+      "blockClass": "editorial-paragraph",
+      "htmlId": "Circa - banner 7 - descrizione"
+    },
+    "title": "Circa - banner 7 - descrizione"
   },
   "flex-layout.col#about-video": {
     "children": ["video#banner6", "rich-text#about-video"],
@@ -315,17 +340,21 @@
   "rich-text#about-video": {
     "props": {
       "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis bibendum venenatis vulputate. Nam sed velit felis. Cras ultricies congue mauris id scelerisque. ",
-      "blockClass": "editorial-paragraph"
-    }
+      "blockClass": "editorial-paragraph",
+      "htmlId": "Circa - video"
+    },
+    "title": "Circa - video"
   },
   "responsive-layout.desktop#lastBanners": {
     "children": ["flex-layout.row#last-banners-section"]
   },
   "flex-layout.row#last-banners-section": {
     "props": {
-      "blockClass": "editorial-sectionLastBanners"
+      "blockClass": "editorial-sectionLastBanners",
+      "htmlId": "Ultima sezione banner"
     },
-    "children": ["flex-layout.col#last-banners-container"]
+    "children": ["flex-layout.col#last-banners-container"],
+    "title": "Ultima sezione banner"
   },
   "flex-layout.col#last-banners-container": {
     "children": ["rich-text#last-banner-title", "flex-layout.row#last-banners"]
@@ -333,15 +362,21 @@
   "rich-text#last-banner-title": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": ["editorial-titleSection", "editorial-carroselTitle"]
-    }
+      "blockClass": ["editorial-titleSection", "editorial-carroselTitle"],
+      "htmlId": "Ultimo banner - titolo"
+    },
+    "title": "Ultimo banner - titolo"
   },
   "flex-layout.row#last-banners": {
     "children": [
       "flex-layout.col#about-banner-8",
       "flex-layout.col#about-banner-9",
       "flex-layout.col#about-banner-10"
-    ]
+    ],
+    "props": {
+      "htmlId": "Ultimi banners"
+    },
+    "title": "Ultimi banners"
   },
   "flex-layout.col#about-banner-8": {
     "children": [
@@ -364,14 +399,18 @@
   "rich-text#about-banner-8-title": {
     "props": {
       "text": "LABEL",
-      "blockClass": "editorial-labelText"
-    }
+      "blockClass": "editorial-labelText",
+      "htmlId": "Circa - banner 8 - titolo"
+    },
+    "title": "Circa - banner 8 - titolo"
   },
   "rich-text#about-banner-8-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 8 - descrizione"
+    },
+    "title": "Circa - banner 8 - descrizione"
   },
   "flex-layout.col#about-banner-9": {
     "children": [
@@ -394,14 +433,18 @@
   "rich-text#about-banner-9-title": {
     "props": {
       "text": "LABEL",
-      "blockClass": "editorial-labelText"
-    }
+      "blockClass": "editorial-labelText",
+      "htmlId": "Circa - banner 9 - titolo"
+    },
+    "title": "Circa - banner 9 - titolo"
   },
   "rich-text#about-banner-9-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 9 - descrizione"
+    },
+    "title": "Circa - banner 9 - descrizione"
   },
   "flex-layout.col#about-banner-10": {
     "children": [
@@ -424,14 +467,18 @@
   "rich-text#about-banner-10-title": {
     "props": {
       "text": "LABEL",
-      "blockClass": "editorial-labelText"
-    }
+      "blockClass": "editorial-labelText",
+      "htmlId": "Circa - banner 10 - titolo"
+    },
+    "title": "Circa - banner 10 - titolo"
   },
   "rich-text#about-banner-10-description": {
     "props": {
       "text": "Lorem ipsum dolor sit amet consectetur adipiscing elit",
-      "blockClass": "editorial-titleSection"
-    }
+      "blockClass": "editorial-titleSection",
+      "htmlId": "Circa - banner 10 - descrizione"
+    },
+    "title": "Circa - banner 10 - descrizione"
   },
   "link#scopriDiPiu": {
     "props": {
