Add prop in Search Result Search

--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -10,6 +10,7 @@
       "context": {
         "skusFilter": "ALL",
         "maxItemsPerPage": 12,
+        "hideUnavailableItems": true,
         "simulationBehavior": "skip"
       }
     }
