--- a/store/blocks/footer/footerMobile.jsonc
+++ b/store/blocks/footer/footerMobile.jsonc
@@ -93,13 +93,13 @@
   },
   "image#Icondown": {
     "props": {
-      "src": "assets/icons/arrowDown.svg",
+      "src": "assets/icons/down-arrow-footer.svg",
       "width": "25px"
     }
   },
   "image#IconUp": {
     "props": {
-      "src": "assets/icons/arrowUp.svg",
+      "src": "assets/icons/up-arrow-footer.svg",
       "width": "25px"
     }
   }
