BRIC-136 footer adjustment in the alignment of the upper section

--- a/store/blocks/footer/footerDesktop.jsonc
+++ b/store/blocks/footer/footerDesktop.jsonc
@@ -129,6 +129,7 @@
     ],
     "props": {
       "width": "55%",
+      "preventVerticalStretch": true,
       "blockClass": "footer-upperFooterCol2"
     }
   },
