BRIC-161 home adjustment on slider layout infinite prop

--- a/store/blocks/product/shelfs.jsonc
+++ b/store/blocks/product/shelfs.jsonc
@@ -48,16 +48,16 @@
       "itemsPerPage": {
         "desktop": 6
       },
-      "infinite": true,
       "fullWidth": true,
       "blockClass": "shelf-also-view",
       "showPaginationDots": "never",
       "showNavigationArrows": "desktopOnly",
-      "navigationStep": 1,
+      "navigationStep": 2,
       "autoplay": {
-        "timeout": 2000,
+        "timeout": 3000,
         "stopOnHover": true
-      }
+      },
+      "infinite": true
       //"centerMode": "to-the-left"
     }
   },
@@ -76,7 +76,7 @@
         "tablet": 4,
         "phone": 1
       },
-      "infinite": true,
+
       "fullWidth": true,
       "blockClass": "shelf-also-view",
       "showPaginationDots": "never",
@@ -86,7 +86,8 @@
       "autoplay": {
         "timeout": 2000,
         "stopOnHover": true
-      }
+      },
+      "infinite": true
     }
   },
 
