BRIC-162 added custom component to change login button color based on form input

--- a/store/blocks/default.jsonc
+++ b/store/blocks/default.jsonc
@@ -11,7 +11,10 @@
   },
 
   "store.login": {
-    "blocks": ["login-content#default"]
+    "blocks": [
+      "login-content#default",
+      "login-button-check"
+    ]
   },
 
   "login-content#default": {
