Revert "Bric 162 no botao de login assim que eu inserir os meus dados para login o botao precisa ficar roxo"

--- a/store/blocks/default.jsonc
+++ b/store/blocks/default.jsonc
@@ -11,10 +11,7 @@
   },
 
   "store.login": {
-    "blocks": [
-      "login-content#default",
-      "login-button-check"
-    ]
+    "blocks": ["login-content#default"]
   },
 
   "login-content#default": {
