--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -435,7 +435,7 @@
     "props": {
       "href": "#",
       "blockClass": "home-shelf",
-      "label": ""
+      "label": "Mostra tutto"
     }
   },
   "responsive-layout.desktop#shelf-also-view": {
@@ -484,7 +484,7 @@
     "props": {
       "href": "#",
       "blockClass": "home-shelf",
-      "label": ""
+      "label": "Mostra tutto"
     }
   },
 
@@ -528,7 +528,7 @@
     "props": {
       "href": "#",
       "blockClass": "home-shelf",
-      "label": ""
+      "label": "Mostra tutto"
     }
   },
 
