--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -13,7 +13,7 @@
       "flex-layout.row#product-shelf-1-title",
       "flex-layout.row#related-products",
       "flex-layout.row#product-shelf-2-title",
-      "flex-layout.row#also-view",
+      "flex-layout.row#also-view-pdp",
       "flex-layout.row#descriptionSpecification",
       "flex-layout.row#faq",
       "flex-layout.row#product-shelf-3-title",
@@ -28,7 +28,7 @@
       "flex-layout.row#product-shelf-1-title",
       "flex-layout.row#related-products",
       "flex-layout.row#product-shelf-2-title",
-      "flex-layout.row#also-view-mobile",
+      "flex-layout.row#also-view-pdp-mobile",
       "flex-layout.row#descriptionSpecification",
       "flex-layout.row#faq",
       "flex-layout.row#product-shelf-3-title",
