--- a/store/blocks/product/shelfs.jsonc
+++ b/store/blocks/product/shelfs.jsonc
@@ -5,6 +5,12 @@
       "blockClass": ["relative", "bg-base", "z-998", "also-view"]
     }
   },
+  "flex-layout.row#also-view-pdp": {
+    "children": ["flex-layout.col#also-view-mobile"],
+    "props": {
+      "blockClass": ["relative", "bg-base", "z-998", "also-view", "also-view-product-page"]
+    }
+  },
   "flex-layout.col#also-view": {
     "children": [
       "rich-text#also-viewTitle",
@@ -12,6 +18,12 @@
     ],
     "props": {
       "blockClass": "also-view"
+    }
+  },
+  "flex-layout.row#also-view-pdp-mobile": {
+    "children": ["flex-layout.col#also-view-mobile"],
+    "props": {
+      "blockClass": ["relative", "bg-base", "z-998", "also-view", "also-view-product-page"]
     }
   },
   "flex-layout.row#also-view-mobile": {
@@ -146,7 +158,7 @@
   "flex-layout.row#sponsored-products": {
     "children": ["flex-layout.col#sponsored-products"],
     "props": {
-      "blockClass": ["relative", "bg-base", "z-998", "also-view"]
+      "blockClass": ["relative", "bg-base", "z-998", "also-view", "also-view-product-page"]
     }
   },
   "flex-layout.col#sponsored-products": {
