Alterando nomes de funções para nomes mais descritivos, modificando funções para retornar produtos ao inves de componentes react

--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -11,8 +11,7 @@
       "flex-layout.row#home-blog",
       // "flex-layout.row#home-reviews",
       "flex-layout.row#home-services",
-      "flex-layout.row#homeBottomSection",
-      "client-info-logged"
+      "flex-layout.row#homeBottomSection"
     ]
   },
   "flex-layout.row#submenu-categories": {
