BRIC-169 implemented image slider inside product-summary

--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -155,11 +155,11 @@
       "blockClass": "home-main-slider-images",
       "infinite": true,
       "showNavigationArrows": "desktopOnly",
-      "showPaginationDots": "never",
-      "autoplay": {
-        "timeout": 2000,
-        "stopOnHover": true
-      }
+      "showPaginationDots": "never"
+      // "autoplay": {
+      //   "timeout": 2000,
+      //   "stopOnHover": true
+      // }
     }
   },
 
