--- a/manifest.json
+++ b/manifest.json
@@ -71,6 +71,7 @@
     "vtex.sticky-layout": "0.x",
     "vtex.add-to-cart-button": "0.x",
     "vtex.pixel-manager": "1.x",
+    "vtex.session-client": "1.x",
     "vtex.product-context": "0.x",
     "vtex.order-manager": "0.x",
     "vtex.order-items": "0.x",
