feat: shelf image slider custom added

--- a/react/package.json
+++ b/react/package.json
@@ -13,12 +13,14 @@
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
     "query-string": "^6.8.3",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intl": "^2.7.2",
     "react-router-dom": "^5.3.0",
+    "react-slick": "^0.29.0",
     "react-step-progress-bar": "^1.0.3",
     "reactstrap": "^9.0.0",
     "recompose": "^0.30.0",
@@ -26,11 +28,13 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
+    "@types/ramda": "^0.28.15",
     "@types/react": "^17.0.38",
+    "@types/react-slick": "^0.23.10",
     "@vtex/test-tools": "^3.4.1",
     "@vtex/tsconfig": "^0.6.0",
     "beightone.buy-together-marketplace": "http://beightone.vtexassets.com/_v/public/typings/v1/beightone.buy-together-marketplace@0.3.0/public/@types/beightone.buy-together-marketplace",
-    "bricobravo.store-theme": "https://fixbric160--bricobravo.myvtex.com/_v/private/typings/linked/v1/bricobravo.store-theme@3.2.14+build1664294365/public/@types/bricobravo.store-theme",
+    "bricobravo.store-theme": "http://bricobravo.vtexassets.com/_v/public/typings/v1/bricobravo.store-theme@3.2.14/public/@types/bricobravo.store-theme",
     "eslint-config-vtex-react": "^8.2.1",
     "typescript": "3.9.7",
     "vtex.add-to-cart-button": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.add-to-cart-button@0.28.0/public/@types/vtex.add-to-cart-button",
