--- a/store/blocks/product/product-summary.jsonc
+++ b/store/blocks/product/product-summary.jsonc
@@ -51,7 +51,7 @@
     "children": ["stack-layout#summary"]
   },
   "stack-layout#summary": {
-    "children": ["product-summary-image"],
+    "children": ["custom-product-summary-image"],
     "props": {
       "zIndexOffset": 3,
       "blockClass": "savingsStack"
