--- a/store/blocks/product/shelfs.jsonc
+++ b/store/blocks/product/shelfs.jsonc
@@ -8,7 +8,13 @@
   "flex-layout.row#also-view-pdp": {
     "children": ["flex-layout.col#also-view-mobile"],
     "props": {
-      "blockClass": ["relative", "bg-base", "z-998", "also-view", "also-view-product-page"]
+      "blockClass": [
+        "relative",
+        "bg-base",
+        "z-998",
+        "also-view",
+        "also-view-product-page"
+      ]
     }
   },
   "flex-layout.col#also-view": {
@@ -23,7 +29,13 @@
   "flex-layout.row#also-view-pdp-mobile": {
     "children": ["flex-layout.col#also-view-mobile"],
     "props": {
-      "blockClass": ["relative", "bg-base", "z-998", "also-view", "also-view-product-page"]
+      "blockClass": [
+        "relative",
+        "bg-base",
+        "z-998",
+        "also-view",
+        "also-view-product-page"
+      ]
     }
   },
   "flex-layout.row#also-view-mobile": {
@@ -65,10 +77,10 @@
       "showPaginationDots": "never",
       "showNavigationArrows": "desktopOnly",
       "navigationStep": 2,
-      // "autoplay": {
-      //   "timeout": 3000,
-      //   "stopOnHover": true
-      // },
+      "autoplay": {
+        "timeout": 3000,
+        "stopOnHover": true
+      },
       "infinite": true
       //"centerMode": "to-the-left"
     }
@@ -95,10 +107,10 @@
       "showNavigationArrows": "desktopOnly",
       "navigationStep": 1,
       "centerMode": "to-the-left",
-      // "autoplay": {
-      //   "timeout": 2000,
-      //   "stopOnHover": true
-      // },
+      "autoplay": {
+        "timeout": 2000,
+        "stopOnHover": true
+      },
       "infinite": true
     }
   },
@@ -158,7 +170,13 @@
   "flex-layout.row#sponsored-products": {
     "children": ["flex-layout.col#sponsored-products"],
     "props": {
-      "blockClass": ["relative", "bg-base", "z-998", "also-view", "also-view-product-page"]
+      "blockClass": [
+        "relative",
+        "bg-base",
+        "z-998",
+        "also-view",
+        "also-view-product-page"
+      ]
     }
   },
   "flex-layout.col#sponsored-products": {
