--- a/manifest.json
+++ b/manifest.json
@@ -76,7 +76,8 @@
     "vtex.order-manager": "0.x",
     "vtex.order-items": "0.x",
     "vtex.modal-layout": "0.x",
-    "vtex.store-video": "1.x"
+    "vtex.store-video": "1.x",
+    "vtex.formatted-price": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
