BRIC-179 testing api routes

--- a/store/blocks/product/product-main.jsonc
+++ b/store/blocks/product/product-main.jsonc
@@ -2,7 +2,8 @@
   "flex-layout.row#product-main": {
     "children": [
       "flex-layout.col#product-images",
-      "flex-layout.col#product-main-infos"
+      "flex-layout.col#product-main-infos",
+      "seller-spedizione"
     ],
     "props": {
       "blockClass": "product-main-content"
