BRIC-178 hinding clear filter button on css and showing clear filter button on js  when the use selected one filter item

--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -288,8 +288,8 @@
   },
   "flex-layout.col#filter": {
     "children": [
-      "filter-navigator.v3"
-      // "rich-text#instructions-range-price"
+      "filter-navigator.v3",
+      "show-clear-filter-button"
     ],
     "props": {
       "blockClass": "filterCol"
@@ -302,12 +302,6 @@
       "showClearAllFiltersOnDesktop": true
     }
   },
-  // "rich-text#instructions-range-price": {
-  //   "props": {
-  //     "text": "**Arraste a barra vermelha** e defina uma faixa de valores para filtrar.",
-  //     "blockClass": "search-instructionRangePrice"
-  //   }
-  // },
   "flex-layout.row#searchinfo": {
     "children": [
       "hide-filter",
